--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "flowbite": "^1.4.7",
+    "flowbite-react": "^0.0.25",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
