--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-users-permissions": "4.1.12",
     "@strapi/strapi": "4.1.12",
     "better-sqlite3": "7.4.6",
+    "strapi-google-auth": "^0.1.2",
     "strapi-plugin-ezforms": "^0.0.7"
   },
   "author": {
