--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,12 @@
     "axios": "^0.27.2",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.25",
+    "iron-session": "^6.1.3",
+    "js-cookie": "^3.0.1",
     "next": "12.1.6",
+    "next-auth": "^4.5.0",
+    "next-connect": "^0.12.2",
+    "pg": "^8.7.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
